# eszett

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
swc/: Cargo.toml  README.md  package.json
swc/src/: lib.rs  transform.rs  utils.rs
swc/tests/: fixtures.rs  integration_test.rs
swc/tests/fixture/create_scope_name/use_new_scope_name_for_each_root_arrow_function/: input.js  output.js
swc/tests/fixture/create_scope_name/use_new_scope_name_for_each_root_function/: input.js  output.js
swc/tests/fixture/create_scope_name/use_same_scope_name_in_lexically_nested_arrow_functions/: input.js  output.js
swc/tests/fixture/create_scope_name/use_same_scope_name_in_lexically_nested_functions/: input.js  output.js
swc/tests/fixture/create_scope_name/use_same_scope_name_throughout_a_function_body/: input.js  output.js
swc/tests/fixture/create_scope_name/use_same_scope_name_throughput_a_arrow_function_body/: input.js  output.js
swc/tests/fixture/remove_sz_imports/but_keep_other_imports/: input.js  output.js
swc/tests/fixture/remove_sz_imports/when_using_both_imports/: input.js
swc/tests/fixture/remove_sz_imports/when_using_default_import/: input.js
swc/tests/fixture/remove_sz_imports/when_using_named_import/: input.js
swc/tests/fixture/replace_scope_name_variable/but_dont_replace_other_variables_which_happen_to_be_called_eszett/: input.js  output.js
swc/tests/fixture/replace_scope_name_variable/when_imported_as_default_import/: input.js  output.js
swc/tests/fixture/rewrite_jsx_class_names/: input.js  output.js
(+23 files in other folders)
