[package]
name = "eszett"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true

[dependencies]
regex = "1.10.4"
serde = "1"
swc_core = { version = "5.0.*", features = ["ecma_plugin_transform", "testing"] }
swc_ecma_parser = "5.0.0"
swc_ecma_utils = "5.0.0"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
